added swagger docs for usercontroller
